# cot_report

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml
src/: __init__.py  example_plot.py  list_contracts.py  main.py  validate_data.py
tools/scripts/: create_venv.sh
